<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfoActivity">


    <TextView
        android:id="@+id/textViewPredmet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ime_predmeta"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/odabirPredmeta"
        app:layout_constraintTop_toBottomOf="@+id/odabirPredmeta"
        app:layout_constraintBottom_toTopOf="@+id/odabirPredmeta"/>

    <Spinner
        android:id="@+id/odabirPredmeta"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textViewPredmet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPredmet"
        app:layout_constraintBottom_toTopOf="@+id/textViewPredmet"/>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirPredmeta" />

    <TextView
        android:id="@+id/textViewProfesor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ime_profesora"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputImeProfesora"
        app:layout_constraintBottom_toTopOf="@+id/inputImeProfesora"
        app:layout_constraintRight_toLeftOf="@+id/inputImeProfesora"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputImeProfesora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewProfesor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputImeProfesora2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputImeProfesora" />

    <TextView
        android:id="@+id/textViewGodina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/godina"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputGodina"
        app:layout_constraintBottom_toTopOf="@+id/inputGodina"
        app:layout_constraintRight_toLeftOf="@+id/inputGodina"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputGodina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewGodina">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputGodina2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputGodina" />

    <TextView
        android:id="@+id/textViewPredavanja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/broj_sati_predavanja"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPredavanja"
        app:layout_constraintBottom_toTopOf="@+id/inputPredavanja"
        app:layout_constraintRight_toLeftOf="@+id/inputPredavanja"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPredavanja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewPredavanja">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPredavanja2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPredavanja" />

    <TextView
        android:id="@+id/textViewLV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/broj_sati_vjezbe"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLV"
        app:layout_constraintBottom_toTopOf="@+id/inputLV"
        app:layout_constraintRight_toLeftOf="@+id/inputLV"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewLV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dalje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>