<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/textViewIme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/textViewPrezime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewPrezime"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/textViewPrezime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewIme"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"/>

    <View
        android:id="@+id/view12"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrezime" />

    <TextView
        android:id="@+id/textViewDatumRodenja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/datum"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIme"
        app:layout_constraintBottom_toTopOf="@+id/textViewGodina"
        app:layout_constraintRight_toLeftOf="@+id/textviewdatum"/>

    <TextView
        android:id="@+id/textviewdatum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/textViewDatumRodenja"
        app:layout_constraintTop_toTopOf="@+id/view12"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"/>


    <View
        android:id="@+id/view13"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewdatum" />

    <TextView
        android:id="@+id/textViewGodina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/godina"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewgodina"
        app:layout_constraintBottom_toTopOf="@+id/textviewgodina"
        app:layout_constraintRight_toLeftOf="@+id/textviewgodina"/>

    <TextView
        android:id="@+id/textviewgodina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/textViewGodina"
        app:layout_constraintTop_toTopOf="@+id/view13"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewgodina" />

    <TextView
        android:id="@+id/textViewPredmetPlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ime_predmeta"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPredmet"
        app:layout_constraintBottom_toTopOf="@+id/textViewPredmet"
        app:layout_constraintRight_toLeftOf="@+id/textViewPredmet"/>

    <TextView
        android:id="@+id/textViewPredmet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/textViewPredmetPlaceholder"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"/>


    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPredmet" />


    <TextView
        android:id="@+id/textViewProfesorPlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ime_profesora"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfesor"
        app:layout_constraintBottom_toTopOf="@+id/textViewProfesor"
        app:layout_constraintRight_toLeftOf="@+id/textViewProfesor"/>

    <TextView
        android:id="@+id/textViewProfesor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/textViewProfesorPlaceholder"
        app:layout_constraintTop_toTopOf="@+id/view8"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <View
        android:id="@+id/view9"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfesor" />


    <TextView
        android:id="@+id/textViewPredavanjaPlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/broj_sati_predavanja"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPredavanja"
        app:layout_constraintBottom_toTopOf="@+id/textViewPredavanja"
        app:layout_constraintRight_toLeftOf="@+id/textViewPredavanja"/>

    <TextView
        android:id="@+id/textViewPredavanja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/textViewPredavanjaPlaceholder"
        app:layout_constraintTop_toTopOf="@+id/view9"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPredavanja" />

    <TextView
        android:id="@+id/textViewVjezbePlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/broj_sati_vjezbe"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVjezbe"
        app:layout_constraintBottom_toTopOf="@+id/textViewVjezbe"
        app:layout_constraintRight_toLeftOf="@+id/textViewVjezbe"/>

    <TextView
        android:id="@+id/textViewVjezbe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/textViewVjezbePlaceholder"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dalje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>